fix some spacing

--- a/app/assets/stylesheets/style.ccs.scss
+++ b/app/assets/stylesheets/style.ccs.scss
@@ -9,11 +9,9 @@ body {
     color: #000;
   }
 }
-
 .nav {
   text-align: center;
 }
-
 .nav_view {
 }
 
@@ -30,7 +28,11 @@ body {
 .assignment_box {
   background-color: #ccc;  
   width: 600px;
-  margin: 20px;
+  padding: 0.1em;
+  .day_heading {
+    font-weight: bold;
+    margin: 2px;
+  }
   .due_time {
     float: right;
     margin-right: 0.5em;
@@ -39,12 +41,13 @@ body {
     font-weight: bold;
   }
   .subject {
-    float: right;
     margin-right: 0.5em;
   }
   .description {
-     color: #000;
-     font-weight: normal;
+    float:left;
+    color: #000;
+    width: 100%;
+    font-weight: normal;
   }
   .completed {
     background-color: #00ccff;
